--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "pg": "^7.12.1",
+    "sequelize": "^5.19.3",
     "uuid": "^3.3.3"
   }
 }
